# diffcmb

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  Main.py  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  roadmap.md  setup.cfg  slurm-11314713.out  slurm-11314714.out  test_env.out  test_ldd.out  test_xla.py
examples/: analysis_2026_06_08.ipynb  analyze_hpc_results.ipynb  basic_usage.ipynb  further_investigation.ipynb
scripts/: analyze_AtA_structure.py  analyze_L200.slurm  analyze_L300.slurm  analyze_chains.py  benchmark_lensing.py  benchmark_lensing.slurm  benchmark_messenger_block_lmax300.py  benchmark_messenger_block_lmax300.slurm  benchmark_messenger_fullcall_lmax300.py  benchmark_messenger_fullcall_lmax300.slurm  benchmark_sht_ducc.py  debug_cg.py  debug_cg.slurm  debug_cg_masksky.py  debug_cg_single_gpu.slurm  debug_lensing_adjoint.py  debug_lensing_adjoint.slurm  debug_messenger_masksky.py  debug_phi_grad.py  debug_phi_grad.slurm  debug_phi_grad2.py  debug_phi_grad2.slurm  debug_phi_grad3.py  debug_phi_grad3.slurm  debug_phi_grad4.py  debug_phi_grad4.slurm  direct_deflection_probe.slurm  direct_deflection_test.py  full_import_probe.py  full_import_probe.slurm  generate_mcmc_dashboard.py  resubmit_real_1.slurm  resubmit_synthetic_2_4.slurm  run_lensing_tests.slurm  run_real_lowl.slurm  run_sampler.py  run_test_cg_matvec_gpu.slurm  submit_L200_preconditioned.slurm  submit_cg_L300.slurm  submit_chains.slurm  (+10 more)
src/rust_sph/: Cargo.toml  pyproject.toml  spherical_harmonics.rs
tests/: test_alm.py  test_alm_utils.py  test_cg_matvec.py  test_model.py  (+6 more)
(+23 files in other folders)
