[tool.poetry]
name = "cmb-sampling-ml"
version = "0.1.0"
description = "Cosmology from the CMB with Advanced Sampling Techniques (MSci project)"
authors = ["Oscar Hickman <oscar.hickman17@alumni.imperial.ac.uk>"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "C", "I", "B"]
ignore = ["E501", "C901", "E402", "F401", "B904", "E741"]