[package]
name = "cmb_sph"
version = "0.1.0"
edition = "2021"

[lib]
name = "cmb_sph"
crate-type = ["cdylib"]
path = "spherical_harmonics.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
num-complex = "0.4"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
